@@ -1,4 +1,4 @@
-; $Id: views.info,v 1.7.6.53 2010-12-24 14:05:39 dereine Exp $
+; $Id: views.info,v 1.7.6.54 2010-12-26 22:41:21 dereine Exp $
 name = Views
 description = Create customized lists and queries from your database.
 package = Views
@@ -234,6 +234,7 @@ files[] = tests/handlers/views_handler_field_math.test
 files[] = tests/handlers/views_handler_field_url.test
 files[] = tests/handlers/views_handler_field_xss.test
 files[] = tests/handlers/views_handler_filter_date.test
+files[] = tests/handlers/views_handler_filter_equality.test
 files[] = tests/handlers/views_handler_filter_in_operator.test
 files[] = tests/handlers/views_handler_filter_numeric.test
 files[] = tests/handlers/views_handler_sort_random.test
